# ComfyUI-AnglesSelect

./: README.md  __init__.py  angles_selector_node.py  pyproject.toml  simple_angles_node.py
.github/workflows/: publish.yml
example_workflows/: AnglesSelector3D.json  SimpleAnglesSelector.json
web/: angles_selector.js  constants.js  i18n.js  model-loader.js  three-loader.js  widget.js
web/models/: README.txt
